# deputydev-binary

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  binary_config.json  build-macos-linux-binary.sh  build-windows-binary.sh  hash-binary-v2.js  hash-binary.js  nuitka-build-command.txt  nuitka-crash-report.xml  pyproject.toml
.github/workflows/: build-binaries.yml  build-linux.yml  build-linux.yml.disabled  build-macos-arm64.yml  build-macos-x64.yml  build-macos.yml  build-on-release.yml  build-windows.yml  code_quality.yaml  main.yml  manual.yml
app/: __init__.py  listeners.py  logging_config.py  refill.patch  service.py
app/clients/: anthropic.py  one_dev_client.py  one_dev_extension_client.py  web_client.py
app/constants/: __init__.py  constant.py  constants.py
app/dataclasses/diff_applicator/: diff_applicator_dataclass.py
app/dataclasses/review/: main.py
app/models/dtos/: autocomplete_search_params.py  autocomplete_search_response.py  batch_chunk_search_params.py  batch_chunk_search_response.py  focus_chunk_params.py  relevant_chunks_params.py  update_vector_store_params.py  url_reader_params.py
app/repository/: urls_content_repository.py
app/routes/: __init__.py  auth_token.py  chunks.py  code_review.py  codebase_read.py  diff_applicator.py  https.py  ide_review.py  initialization.py  mcp.py  ping.py  search.py  shutdown.py  url.py  url_reader.py  websockets.py
app/services/: __init__.py  auth_token_service.py  autocomplete_search_service.py  batch_chunk_search_service.py  comment_validator.py  diff_applicator_service.py  initialization_service.py  mcp_service.py  relevant_chunk_service.py  reranker_service.py  shared_chunks_manager.py
app/services/focus_search/: focus_search_service.py
app/services/review/: diff_utils.py  file_ignore_utils.py  git_utils.py  review_service.py
app/services/url_reader/: url_reader_factory.py  (+1 more)
app/utils/: constants.py  error_handler.py  read_file.py  request_handlers.py  response_headers_handler.py  ripgrep_path.py  shared_memory.py  util.py
(+41 files in other folders)
