[tool.poetry]
name = "deputydev-binary"
version = "0.1.0"
description = ""
authors = ["Deputy Dev <deputydev@1mg.com>"]


[tool.poetry.dependencies]
python = "3.11.*"
sanic = "22.12.0"
websockets = "12.0"
fuzzywuzzy = "0.18.0"
bs4 = "0.0.2"
html2text = "2025.4.15"
deputydev-core = { git = "ssh://git@github.com/tata1mg/deputydev-core.git", rev = "pyproject_setup" }

[tool.poetry.group.dev.dependencies]
pycrunch-engine = "==1.6.2"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
