[project]
name = "deputydev-binary"
version = "4.0.0"
description = "Installable binary for running Deputy Dev algorithms"
readme = "README.md"
authors = [{ name = "Deputy Dev", email = "deputydev@1mg.com" }]
requires-python = ">=3.11,<3.12"
dependencies = [
  "sanic==22.12.0",
  "websockets==12.0",
  "fuzzywuzzy==0.18.0",
  "bs4==0.0.2",
  "html2text==2025.4.15",
  "deputydev-core @ git+ssh://git@github.com/tata1mg/deputydev-core.git@pr_review_final"
]

[project.optional-dependencies]
binarization = [
    "nuitka>=2.7.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
